[tool.poetry]
name = "roadmaptutor"
version = "0.1.0"
description = ""
authors = ["promptmelody <revup123456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.33.0"
notion-client = "^2.2.1"
agentscope = "^0.0.3"
langchain = "^0.1.14"
langchain-community = "^0.0.31"
pydantic = "^1.10"
streamlit-markmap = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
